AM_CXXFLAGS=-O3 -static -static-libstdc++ -static-libgcc -flto -fopenmp -Wall -DWIN32 -std=gnu++11 -I/usr/include/boost -I${top_srcdir}/include -Wno-deprecated
#AM_CXXFLAGS=-lboost_system -lrt -lncurses -fopenmp -Wall -DUNIX -lpthread -std=gnu++11 -I/usr/include/boost -I${top_srcdir}/include -Wno-deprecated
bin_PROGRAMS=ohcs
ohcs_SOURCES=main.cpp OCSS.cpp del.cpp BigIntegerAlgorithms.cc BigUnsigned.cc BigInteger.cc BigUnsignedInABase.cc BigIntegerUtils.cc BigIntegerAlgorithms.hh  BigIntegerLibrary.hh  BigUnsigned.hh del.hpp OCSS.hpp BigInteger.hh BigIntegerUtils.hh BigUnsignedInABase.hh  NumberlikeArray.hh	base64.cpp base64.hpp
